# cui-connect

./: .gitignore  README.md
Chatbot backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Chatbot backend/app/: main.py
Chatbot backend/app/core/: config.py  database.py  security.py
Chatbot backend/app/routes/: auth.py  chat.py  users.py
Chatbot backend/app/schemas/: auth.py  chat.py  user.py
Chatbot backend/app/services/: auth_service.py  chat_service.py  user_service.py
dataset files/: cui_attock_FULL_SITE_DATA.txt  cui_rag_dataset.csv  cui_rag_dataset.json  train-00000-of-00001.parquet
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AIAssistantUI.tsx  ChatPane.tsx  Composer.tsx  ConversationRow.tsx  Header.tsx  SearchModal.jsx  Sidebar.tsx  ThinkingSpinner.tsx  theme-toggle.tsx  utils.js
frontend/components/ui/: textarea.tsx
frontend/lib/: api.ts  constants.ts
