[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "gotrue>=2.12.4",
    "groq>=1.1.1",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-voyageai>=0.3.3",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg-pool>=3.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]
